--- a/CloudFormation/nginx.yml
+++ b/CloudFormation/nginx.yml
@@ -50,37 +50,25 @@ Resources:
           # Update and install Nginx
           sudo apt-get update
           sudo apt-get install -y nginx
+          sudo apt-get install -y libnginx-mod-rtmp
 
           # Display Nginx version
           sudo nginx -v
 
           # Create rtmp configuration file
-          echo 'server {
+          echo 'rtmp {
+            server {
               listen 1935;
               chunk_size 4096;
+              allow publish 127.0.0.1;
+              deny publish all;
 
               application live {
-                  live on;
-                  record off;
+                      live on;
+                      record off;
               }
-          }' | sudo tee /etc/nginx/sites-available/rtmp.conf
-
-          # Create a symbolic link to enable the rtmp configuration
-          sudo ln -s /etc/nginx/sites-available/rtmp.conf /etc/nginx/sites-enabled/
-
-          # Disable the default configuration
-          sudo rm /etc/nginx/sites-enabled/default
-
-          # Create a rtmp configuration in conf.d
-          echo 'server {
-              listen 1935;
-              chunk_size 4096;
-
-              application live {
-                  live on;
-                  record off;
-              }
-          }' | sudo tee /etc/nginx/conf.d/rtmp.conf
+            }
+          }' | sudo tee /etc/nginx/nginx.conf
 
           # Reload Nginx to apply changes
           sudo nginx -s reload
