--- a/Configuration/nginx.conf
+++ b/Configuration/nginx.conf
@@ -1,20 +1,22 @@
+load_module modules/ngx_rtmp_module.so;
+
 worker_processes  2;
 
 events {
-	worker_connections  8192;
+        worker_connections  8192;
 }
 
 rtmp {
-	server {
-		listen 1935;
-		chunk_size 4096;
+  server {
+    listen 1935;
+    chunk_size 4096;
+    allow publish 127.0.0.1;
+    allow publish ${IngressIP};
+    deny publish all;
 
-		application live {
-			live on;
-			record off;
-
-			# To push to multiple locations, uncomment lines below and substitute in your RTMP URI and stream key
-			# push rtmp://server/path/streamkey;
-		}
-	}
+    application live {
+            live on;
+            record off;
+    }
+  }
 }
