--- a/CloudFormation/nginx.yml
+++ b/CloudFormation/nginx.yml
@@ -1,19 +1,20 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
 Parameters:
-  IngressCIDR:
+  IngressIP:
     Type: String
-    Description: CIDR range for inbound access.
-    Default: 0.0.0.0/0
+    Description: IP address for inbound access.
+    Default: 0.0.0.0
   AllowSSH:
     Type: String
-    Description: Allow SSH access from the specified CIDR range.
+    Description: Allow SSH access from IngressIP.
     AllowedValues: [true, false]
     Default: false
-  DestinationURL:
+  InstanceType:
     Type: String
-    Description: The URL of the destination server.
-    Default: rtmp://server/path/streamkey
+    Description: The instance type for the EC2 instance.
+    AllowedValues: [t2.micro, t2.small, t2.medium]
+    Default: t2.micro
   KeypairName:
     Type: String
     Description: The name of the EC2 key pair to associate with the instance.
@@ -40,7 +41,7 @@ Resources:
     Type: 'AWS::EC2::Instance'
     Properties:
       ImageId: !Ref AMI
-      InstanceType: t2.micro
+      InstanceType: !Ref InstanceType
       KeyName: !Ref KeypairName
       SecurityGroupIds:
         - !Ref SecurityGroup
@@ -56,19 +57,26 @@ Resources:
           sudo nginx -v
 
           # Create rtmp configuration file
-          echo 'rtmp {
-            server {
-              listen 1935;
-              chunk_size 4096;
-              allow publish 127.0.0.1;
-              deny publish all;
-
-              application live {
-                      live on;
-                      record off;
-              }
+          echo 'load_module modules/ngx_rtmp_module.so;
+            worker_processes  2;
+            events {
+              worker_connections  8192;
             }
-          }' | sudo tee /etc/nginx/nginx.conf
+
+            rtmp {
+              server {
+                listen 1935;
+                chunk_size 4096;
+                allow publish 127.0.0.1;
+                allow publish ${IngressIP};
+                deny publish all;
+
+                application live {
+                        live on;
+                        record off;
+                }
+              }
+            }' | sudo tee /etc/nginx/nginx.conf
 
           # Reload Nginx to apply changes
           sudo nginx -s reload
@@ -89,13 +97,13 @@ Resources:
         - IpProtocol: tcp
           FromPort: 1935
           ToPort: 1935
-          CidrIp: !Ref IngressCIDR
+          CidrIp: !Sub '${IngressIP}/32'
         - !If
           - ShouldAllowSSH
           - IpProtocol: tcp
             FromPort: 22
             ToPort: 22
-            CidrIp: !Ref IngressCIDR
+            CidrIp: !Sub '${IngressIP}/32'
           - !Ref "AWS::NoValue"
       Tags:
         - Key: ProjectName
